// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Headers/Hero With Background 1`] = `
<Hero
  backgroundImage="/images/banner.png"
  buttonLink="/listings"
  buttonTitle="Rental Listings"
  listings={Array []}
  title={
    <React.Fragment>
      Say Hello to Your Hero
    </React.Fragment>
  }
>
  <div
    className="hero "
    style={
      Object {
        "backgroundImage": "url(/images/banner.png)",
      }
    }
  >
    <h1
      className="hero__title"
    >
      Say Hello to Your Hero
    </h1>
    <h2
      className="hero__subtitle"
    >
      All applications are currently closed, but you can view closed listings.
    </h2>
    <LinkButton
      href="/listings"
    >
      <LocalizedLink
        className="button"
        href="/listings"
      >
        <Link
          href="/listings"
        >
          <a
            className="button"
            href="/listings"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Rental Listings
          </a>
        </Link>
      </LocalizedLink>
    </LinkButton>
  </div>
</Hero>
`;

exports[`Storyshots Headers/Hero With Listings 1`] = `
<Hero
  buttonLink="/listings"
  buttonTitle="I am a Button"
  listings={
    Array [
      Object {
        "accessibility": "There is a total of 5 ADA units in the complex, all others are adaptable. Exterior Wheelchair ramp (front entry)",
        "amenities": "Community Room, Laundry Room, Assigned Parking, Bike Storage, Roof Top Garden, Part-time Resident Service Coordinator",
        "applicationAddress": Object {
          "city": "San Jose",
          "county": "San Jose",
          "latitude": 37.365687,
          "longitude": -121.910608,
          "state": "CA",
          "street": "98 Archer Street",
          "zipCode": "95112",
        },
        "applicationDueDate": "2019-11-01T09:00:00.000-07:00",
        "applicationFee": "30.0",
        "applicationMethods": Array [
          Object {
            "acceptsPostmarkedApplications": true,
            "type": "POBox",
          },
          Object {
            "type": "LeasingAgent",
          },
          Object {
            "type": "PaperPickup",
          },
        ],
        "applicationOrganization": "98 Archer Street",
        "applicationPhone": "(408) 217-8562",
        "assets": Array [
          Object {
            "fileId": "https://regional-dahlia-staging.s3-us-west-1.amazonaws.com/listings/archer/archer-studios.jpg",
            "label": "building",
            "referenceId": "Uvbk5qurpB2WI9V6WnNdH",
            "referenceType": "Listing",
          },
        ],
        "attachments": Array [
          Object {
            "fileUrl": "http://bit.ly/2Vkbdh2",
            "label": "English",
            "type": 1,
          },
        ],
        "buildingAddress": Object {
          "city": "San Jose",
          "county": "San Jose",
          "latitude": 37.365687,
          "longitude": -121.910608,
          "state": "CA",
          "street": "98 Archer Street",
          "zipCode": "95112",
        },
        "buildingName": "Archer Studios",
        "buildingSelectionCriteria": "http://bit.ly/2IxRp4H",
        "buildingTotalUnits": 35,
        "costsNotIncluded": "Resident responsible for PG&E, internet and phone.  Owner pays for water, trash, and sewage.  Residents encouraged to obtain renter's insurance but this is not a requirement.  Rent is due by the 5th of each month. Late fee $35 and returned check fee is $35 additional.",
        "createdAt": "2019-07-08T15:37:19.565Z",
        "creditHistory": "Applications will be rated on a score system for housing. An applicant's score may be impacted by negative tenant peformance information provided to the credit reporting agency.  All applicants are expected have a passing acore of 70 points out of 100 to be considered for housing.  Applicants with no credit history will receive a maximum of 80 points to fairly outweigh positive and/or negative trades as would an applicant with established credit history. Refer to Tenant Selection Criteria or Qualification Criteria for details related to the qualification process. ",
        "criminalBackground": "A criminal background investigation will be obtained on each applicant.  As criminal background checks are done county by county and will be ran for all counties in which the applicant lived,  Applicants will be disqualified for tenancy if they have been convicted of a felony or misdemeanor.  Refer to Tenant Selection Criteria or Qualification Criteria for details related to the qualification process. ",
        "depositMax": "1140",
        "depositMin": "719",
        "developer": "Charities Housing ",
        "disableUnitsAccordion": true,
        "externalId": null,
        "groupId": 1,
        "hideUnitFeatures": false,
        "id": "Uvbk5qurpB2WI9V6WnNdH",
        "leasingAgentAddress": Object {
          "city": "San Jose",
          "latitude": 37.365687,
          "longitude": -121.910608,
          "state": "CA",
          "street": "98 Archer Street",
          "zipCode": "95112",
        },
        "leasingAgentEmail": "mbaca@charitieshousing.org",
        "leasingAgentName": "Marisela Baca",
        "leasingAgentOfficeHours": "Mon, Tues & Fri, 9:00AM - 4:00PM",
        "leasingAgentPhone": "(408) 217-8562",
        "leasingAgentTitle": "",
        "name": "Archer Studios",
        "neighborhood": "Rosemary Gardens Park",
        "petPolicy": "No pets allowed. Accommodation animals may be granted to persons with disabilities via a reasonable accommodation request.",
        "preferences": Array [],
        "prioritiesDescriptor": null,
        "programRules": "Applicants must adhere to minimum & maximum income limits. Tenant Selection Criteria applies.",
        "rentalAssistance": "Custom rental assistance",
        "rentalHistory": "Two years of rental history will be verified with all applicable landlords.  Household family members and/or personal friends are not acceptable landlord references.  Two professional character references may be used in lieu of rental history for applicants with no prior rental history.  An unlawful detainer report will be processed thourhg the U.D. Registry, Inc. Applicants will be disqualified if they have any evictions filing within the last 7 years.  Refer to Tenant Selection Criteria or Qualification Criteria for details related to the qualification process.",
        "requiredDocuments": "Completed application and government issued IDs",
        "reservedCommunityMaximumAge": null,
        "reservedCommunityMinimumAge": null,
        "reservedDescriptor": null,
        "smokingPolicy": "Non-smoking building",
        "unitAmenities": "Dishwasher",
        "units": Array [
          Object {
            "amiChartId": 4,
            "amiPercentage": "30.0",
            "annualIncomeMax": "30750.0",
            "annualIncomeMin": "17256.0",
            "createdAt": "2019-08-14T15:56:06.612Z",
            "floor": 3,
            "id": 52,
            "listingId": 5,
            "maxOccupancy": 2,
            "minOccupancy": 1,
            "monthlyIncomeMin": "1438.0",
            "monthlyRent": "719.0",
            "monthlyRentAsPercentOfIncome": null,
            "numBathrooms": null,
            "numBedrooms": null,
            "number": null,
            "priorityType": null,
            "reservedType": null,
            "sqFeet": 285,
            "status": "occupied",
            "unitType": "studio",
            "updatedAt": "2019-08-14T16:06:59.267Z",
          },
          Object {
            "amiChartId": 4,
            "amiPercentage": "30.0",
            "annualIncomeMax": "30750.0",
            "annualIncomeMin": "17256.0",
            "createdAt": "2019-08-14T15:56:06.606Z",
            "floor": 3,
            "id": 51,
            "listingId": 5,
            "maxOccupancy": 2,
            "minOccupancy": 1,
            "monthlyIncomeMin": "1438.0",
            "monthlyRent": "719.0",
            "monthlyRentAsPercentOfIncome": null,
            "numBathrooms": null,
            "numBedrooms": null,
            "number": null,
            "priorityType": null,
            "reservedType": null,
            "sqFeet": 285,
            "status": "occupied",
            "unitType": "studio",
            "updatedAt": "2019-08-14T16:06:59.260Z",
          },
          Object {
            "amiChartId": 4,
            "amiPercentage": "30.0",
            "annualIncomeMax": "30750.0",
            "annualIncomeMin": "17256.0",
            "createdAt": "2019-08-14T15:56:06.593Z",
            "floor": 3,
            "id": 50,
            "listingId": 5,
            "maxOccupancy": 2,
            "minOccupancy": 1,
            "monthlyIncomeMin": "1438.0",
            "monthlyRent": "719.0",
            "monthlyRentAsPercentOfIncome": null,
            "numBathrooms": null,
            "numBedrooms": null,
            "number": null,
            "priorityType": null,
            "reservedType": null,
            "sqFeet": 285,
            "status": "occupied",
            "unitType": "studio",
            "updatedAt": "2019-08-14T16:06:59.254Z",
          },
          Object {
            "amiChartId": 4,
            "amiPercentage": "30.0",
            "annualIncomeMax": "30750.0",
            "annualIncomeMin": "17256.0",
            "createdAt": "2019-08-14T15:56:06.587Z",
            "floor": 3,
            "id": 49,
            "listingId": 5,
            "maxOccupancy": 2,
            "minOccupancy": 1,
            "monthlyIncomeMin": "1438.0",
            "monthlyRent": "719.0",
            "monthlyRentAsPercentOfIncome": null,
            "numBathrooms": null,
            "numBedrooms": null,
            "number": null,
            "priorityType": null,
            "reservedType": null,
            "sqFeet": 285,
            "status": "occupied",
            "unitType": "studio",
            "updatedAt": "2019-08-14T16:06:59.247Z",
          },
          Object {
            "amiChartId": 4,
            "amiPercentage": "30.0",
            "annualIncomeMax": "30750.0",
            "annualIncomeMin": "17256.0",
            "createdAt": "2019-08-14T15:56:06.580Z",
            "floor": 3,
            "id": 48,
            "listingId": 5,
            "maxOccupancy": 2,
            "minOccupancy": 1,
            "monthlyIncomeMin": "1438.0",
            "monthlyRent": "719.0",
            "monthlyRentAsPercentOfIncome": null,
            "numBathrooms": null,
            "numBedrooms": null,
            "number": null,
            "priorityType": null,
            "reservedType": null,
            "sqFeet": 285,
            "status": "occupied",
            "unitType": "studio",
            "updatedAt": "2019-08-14T16:06:59.241Z",
          },
          Object {
            "amiChartId": 4,
            "amiPercentage": "30.0",
            "annualIncomeMax": "30750.0",
            "annualIncomeMin": "17256.0",
            "createdAt": "2019-08-14T15:56:06.575Z",
            "floor": 3,
            "id": 47,
            "listingId": 5,
            "maxOccupancy": 2,
            "minOccupancy": 1,
            "monthlyIncomeMin": "1438.0",
            "monthlyRent": "719.0",
            "monthlyRentAsPercentOfIncome": null,
            "numBathrooms": null,
            "numBedrooms": null,
            "number": null,
            "priorityType": null,
            "reservedType": null,
            "sqFeet": 285,
            "status": "occupied",
            "unitType": "studio",
            "updatedAt": "2019-08-14T16:06:59.235Z",
          },
          Object {
            "amiChartId": 4,
            "amiPercentage": "30.0",
            "annualIncomeMax": "30750.0",
            "annualIncomeMin": "17256.0",
            "createdAt": "2019-08-14T15:56:06.570Z",
            "floor": 3,
            "id": 46,
            "listingId": 5,
            "maxOccupancy": 2,
            "minOccupancy": 1,
            "monthlyIncomeMin": "1438.0",
            "monthlyRent": "719.0",
            "monthlyRentAsPercentOfIncome": null,
            "numBathrooms": null,
            "numBedrooms": null,
            "number": null,
            "priorityType": null,
            "reservedType": null,
            "sqFeet": 285,
            "status": "occupied",
            "unitType": "studio",
            "updatedAt": "2019-08-14T16:06:59.229Z",
          },
          Object {
            "amiChartId": 4,
            "amiPercentage": "30.0",
            "annualIncomeMax": "30750.0",
            "annualIncomeMin": "17256.0",
            "createdAt": "2019-08-14T15:56:06.563Z",
            "floor": 3,
            "id": 45,
            "listingId": 5,
            "maxOccupancy": 2,
            "minOccupancy": 1,
            "monthlyIncomeMin": "1438.0",
            "monthlyRent": "719.0",
            "monthlyRentAsPercentOfIncome": null,
            "numBathrooms": null,
            "numBedrooms": null,
            "number": null,
            "priorityType": null,
            "reservedType": null,
            "sqFeet": 285,
            "status": "occupied",
            "unitType": "studio",
            "updatedAt": "2019-08-14T16:06:59.222Z",
          },
          Object {
            "amiChartId": 4,
            "amiPercentage": "30.0",
            "annualIncomeMax": "30750.0",
            "annualIncomeMin": "17256.0",
            "createdAt": "2019-08-14T15:55:22.984Z",
            "floor": 2,
            "id": 44,
            "listingId": 5,
            "maxOccupancy": 2,
            "minOccupancy": 1,
            "monthlyIncomeMin": "1438.0",
            "monthlyRent": "719.0",
            "monthlyRentAsPercentOfIncome": null,
            "numBathrooms": null,
            "numBedrooms": null,
            "number": null,
            "priorityType": null,
            "reservedType": null,
            "sqFeet": 285,
            "status": "occupied",
            "unitType": "studio",
            "updatedAt": "2019-08-14T16:06:59.216Z",
          },
          Object {
            "amiChartId": 4,
            "amiPercentage": "30.0",
            "annualIncomeMax": "30750.0",
            "annualIncomeMin": "17256.0",
            "createdAt": "2019-08-14T15:55:22.978Z",
            "floor": 2,
            "id": 43,
            "listingId": 5,
            "maxOccupancy": 2,
            "minOccupancy": 1,
            "monthlyIncomeMin": "1438.0",
            "monthlyRent": "719.0",
            "monthlyRentAsPercentOfIncome": null,
            "numBathrooms": null,
            "numBedrooms": null,
            "number": null,
            "priorityType": null,
            "reservedType": null,
            "sqFeet": 285,
            "status": "occupied",
            "unitType": "studio",
            "updatedAt": "2019-08-14T16:06:59.210Z",
          },
          Object {
            "amiChartId": 4,
            "amiPercentage": "30.0",
            "annualIncomeMax": "30750.0",
            "annualIncomeMin": "17256.0",
            "createdAt": "2019-08-14T15:55:22.972Z",
            "floor": 2,
            "id": 42,
            "listingId": 5,
            "maxOccupancy": 2,
            "minOccupancy": 1,
            "monthlyIncomeMin": "1438.0",
            "monthlyRent": "719.0",
            "monthlyRentAsPercentOfIncome": null,
            "numBathrooms": null,
            "numBedrooms": null,
            "number": null,
            "priorityType": null,
            "reservedType": null,
            "sqFeet": 285,
            "status": "occupied",
            "unitType": "studio",
            "updatedAt": "2019-08-14T16:06:59.204Z",
          },
          Object {
            "amiChartId": 4,
            "amiPercentage": "30.0",
            "annualIncomeMax": "30750.0",
            "annualIncomeMin": "17256.0",
            "createdAt": "2019-08-14T15:55:22.967Z",
            "floor": 2,
            "id": 41,
            "listingId": 5,
            "maxOccupancy": 2,
            "minOccupancy": 1,
            "monthlyIncomeMin": "1438.0",
            "monthlyRent": "719.0",
            "monthlyRentAsPercentOfIncome": null,
            "numBathrooms": null,
            "numBedrooms": null,
            "number": null,
            "priorityType": null,
            "reservedType": null,
            "sqFeet": 285,
            "status": "occupied",
            "unitType": "studio",
            "updatedAt": "2019-08-14T16:06:59.198Z",
          },
          Object {
            "amiChartId": 4,
            "amiPercentage": "30.0",
            "annualIncomeMax": "30750.0",
            "annualIncomeMin": "17256.0",
            "createdAt": "2019-08-14T15:55:22.961Z",
            "floor": 2,
            "id": 40,
            "listingId": 5,
            "maxOccupancy": 2,
            "minOccupancy": 1,
            "monthlyIncomeMin": "1438.0",
            "monthlyRent": "719.0",
            "monthlyRentAsPercentOfIncome": null,
            "numBathrooms": null,
            "numBedrooms": null,
            "number": null,
            "priorityType": null,
            "reservedType": null,
            "sqFeet": 285,
            "status": "occupied",
            "unitType": "studio",
            "updatedAt": "2019-08-14T16:06:59.192Z",
          },
          Object {
            "amiChartId": 4,
            "amiPercentage": "30.0",
            "annualIncomeMax": "30750.0",
            "annualIncomeMin": "17256.0",
            "createdAt": "2019-08-14T15:55:22.956Z",
            "floor": 2,
            "id": 39,
            "listingId": 5,
            "maxOccupancy": 2,
            "minOccupancy": 1,
            "monthlyIncomeMin": "1438.0",
            "monthlyRent": "719.0",
            "monthlyRentAsPercentOfIncome": null,
            "numBathrooms": null,
            "numBedrooms": null,
            "number": null,
            "priorityType": null,
            "reservedType": null,
            "sqFeet": 285,
            "status": "occupied",
            "unitType": "studio",
            "updatedAt": "2019-08-14T16:06:59.186Z",
          },
          Object {
            "amiChartId": 4,
            "amiPercentage": "30.0",
            "annualIncomeMax": "30750.0",
            "annualIncomeMin": "17256.0",
            "createdAt": "2019-08-14T15:55:22.950Z",
            "floor": 2,
            "id": 38,
            "listingId": 5,
            "maxOccupancy": 2,
            "minOccupancy": 1,
            "monthlyIncomeMin": "1438.0",
            "monthlyRent": "719.0",
            "monthlyRentAsPercentOfIncome": null,
            "numBathrooms": null,
            "numBedrooms": null,
            "number": null,
            "priorityType": null,
            "reservedType": null,
            "sqFeet": 285,
            "status": "occupied",
            "unitType": "studio",
            "updatedAt": "2019-08-14T16:06:59.179Z",
          },
          Object {
            "amiChartId": 4,
            "amiPercentage": "30.0",
            "annualIncomeMax": "30750.0",
            "annualIncomeMin": "17256.0",
            "createdAt": "2019-07-09T14:24:14.122Z",
            "floor": 2,
            "id": 37,
            "listingId": 5,
            "maxOccupancy": 2,
            "minOccupancy": 1,
            "monthlyIncomeMin": "1438.0",
            "monthlyRent": "719.0",
            "monthlyRentAsPercentOfIncome": null,
            "numBathrooms": null,
            "numBedrooms": null,
            "number": null,
            "priorityType": null,
            "reservedType": null,
            "sqFeet": 285,
            "status": "occupied",
            "unitType": "studio",
            "updatedAt": "2019-08-14T16:06:59.173Z",
          },
          Object {
            "amiChartId": 4,
            "amiPercentage": "45.0",
            "annualIncomeMax": "46125.0",
            "annualIncomeMin": "26496.0",
            "createdAt": "2019-08-14T15:53:09.976Z",
            "floor": 3,
            "id": 36,
            "listingId": 5,
            "maxOccupancy": 2,
            "minOccupancy": 1,
            "monthlyIncomeMin": "2208.0",
            "monthlyRent": "1104.0",
            "monthlyRentAsPercentOfIncome": null,
            "numBathrooms": null,
            "numBedrooms": null,
            "number": null,
            "priorityType": null,
            "reservedType": null,
            "sqFeet": 285,
            "status": "occupied",
            "unitType": "studio",
            "updatedAt": "2019-08-14T16:06:59.167Z",
          },
          Object {
            "amiChartId": 4,
            "amiPercentage": "45.0",
            "annualIncomeMax": "46125.0",
            "annualIncomeMin": "26496.0",
            "createdAt": "2019-08-14T15:53:09.976Z",
            "floor": 3,
            "id": 35,
            "listingId": 5,
            "maxOccupancy": 2,
            "minOccupancy": 1,
            "monthlyIncomeMin": "2208.0",
            "monthlyRent": "1104.0",
            "monthlyRentAsPercentOfIncome": null,
            "numBathrooms": null,
            "numBedrooms": null,
            "number": null,
            "priorityType": null,
            "reservedType": null,
            "sqFeet": 285,
            "status": "occupied",
            "unitType": "studio",
            "updatedAt": "2019-08-14T16:06:59.161Z",
          },
          Object {
            "amiChartId": 4,
            "amiPercentage": "45.0",
            "annualIncomeMax": "46125.0",
            "annualIncomeMin": "26496.0",
            "createdAt": "2019-08-14T15:53:09.970Z",
            "floor": 3,
            "id": 34,
            "listingId": 5,
            "maxOccupancy": 2,
            "minOccupancy": 1,
            "monthlyIncomeMin": "2208.0",
            "monthlyRent": "1104.0",
            "monthlyRentAsPercentOfIncome": null,
            "numBathrooms": null,
            "numBedrooms": null,
            "number": null,
            "priorityType": null,
            "reservedType": null,
            "sqFeet": 285,
            "status": "occupied",
            "unitType": "studio",
            "updatedAt": "2019-08-14T16:06:59.155Z",
          },
          Object {
            "amiChartId": 4,
            "amiPercentage": "45.0",
            "annualIncomeMax": "46125.0",
            "annualIncomeMin": "26496.0",
            "createdAt": "2019-08-14T15:53:09.965Z",
            "floor": 3,
            "id": 33,
            "listingId": 5,
            "maxOccupancy": 2,
            "minOccupancy": 1,
            "monthlyIncomeMin": "2208.0",
            "monthlyRent": "1104.0",
            "monthlyRentAsPercentOfIncome": null,
            "numBathrooms": null,
            "numBedrooms": null,
            "number": null,
            "priorityType": null,
            "reservedType": null,
            "sqFeet": 285,
            "status": "occupied",
            "unitType": "studio",
            "updatedAt": "2019-08-14T16:06:59.148Z",
          },
          Object {
            "amiChartId": 4,
            "amiPercentage": "45.0",
            "annualIncomeMax": "46125.0",
            "annualIncomeMin": "26496.0",
            "createdAt": "2019-08-14T15:53:09.960Z",
            "floor": 3,
            "id": 32,
            "listingId": 5,
            "maxOccupancy": 2,
            "minOccupancy": 1,
            "monthlyIncomeMin": "2208.0",
            "monthlyRent": "1104.0",
            "monthlyRentAsPercentOfIncome": null,
            "numBathrooms": null,
            "numBedrooms": null,
            "number": null,
            "priorityType": null,
            "reservedType": null,
            "sqFeet": 285,
            "status": "occupied",
            "unitType": "studio",
            "updatedAt": "2019-08-14T16:06:59.142Z",
          },
          Object {
            "amiChartId": 4,
            "amiPercentage": "45.0",
            "annualIncomeMax": "46125.0",
            "annualIncomeMin": "26496.0",
            "createdAt": "2019-08-14T15:53:09.955Z",
            "floor": 3,
            "id": 31,
            "listingId": 5,
            "maxOccupancy": 2,
            "minOccupancy": 1,
            "monthlyIncomeMin": "2208.0",
            "monthlyRent": "1104.0",
            "monthlyRentAsPercentOfIncome": null,
            "numBathrooms": null,
            "numBedrooms": null,
            "number": null,
            "priorityType": null,
            "reservedType": null,
            "sqFeet": 285,
            "status": "occupied",
            "unitType": "studio",
            "updatedAt": "2019-08-14T16:06:59.136Z",
          },
          Object {
            "amiChartId": 4,
            "amiPercentage": "45.0",
            "annualIncomeMax": "46125.0",
            "annualIncomeMin": "26496.0",
            "createdAt": "2019-08-14T15:53:09.950Z",
            "floor": 3,
            "id": 30,
            "listingId": 5,
            "maxOccupancy": 2,
            "minOccupancy": 1,
            "monthlyIncomeMin": "2208.0",
            "monthlyRent": "1104.0",
            "monthlyRentAsPercentOfIncome": null,
            "numBathrooms": null,
            "numBedrooms": null,
            "number": null,
            "priorityType": null,
            "reservedType": null,
            "sqFeet": 285,
            "status": "occupied",
            "unitType": "studio",
            "updatedAt": "2019-08-14T16:06:59.130Z",
          },
          Object {
            "amiChartId": 4,
            "amiPercentage": "45.0",
            "annualIncomeMax": "46125.0",
            "annualIncomeMin": "26496.0",
            "createdAt": "2019-08-14T15:53:09.944Z",
            "floor": 3,
            "id": 29,
            "listingId": 5,
            "maxOccupancy": 2,
            "minOccupancy": 1,
            "monthlyIncomeMin": "2208.0",
            "monthlyRent": "1104.0",
            "monthlyRentAsPercentOfIncome": null,
            "numBathrooms": null,
            "numBedrooms": null,
            "number": null,
            "priorityType": null,
            "reservedType": null,
            "sqFeet": 285,
            "status": "occupied",
            "unitType": "studio",
            "updatedAt": "2019-08-14T16:06:59.124Z",
          },
          Object {
            "amiChartId": 4,
            "amiPercentage": "45.0",
            "annualIncomeMax": "46125.0",
            "annualIncomeMin": "26496.0",
            "createdAt": "2019-08-14T15:53:09.938Z",
            "floor": 3,
            "id": 28,
            "listingId": 5,
            "maxOccupancy": 2,
            "minOccupancy": 1,
            "monthlyIncomeMin": "2208.0",
            "monthlyRent": "1104.0",
            "monthlyRentAsPercentOfIncome": null,
            "numBathrooms": null,
            "numBedrooms": null,
            "number": null,
            "priorityType": null,
            "reservedType": null,
            "sqFeet": 285,
            "status": "occupied",
            "unitType": "studio",
            "updatedAt": "2019-08-14T16:06:59.118Z",
          },
          Object {
            "amiChartId": 4,
            "amiPercentage": "45.0",
            "annualIncomeMax": "46125.0",
            "annualIncomeMin": "26496.0",
            "createdAt": "2019-08-14T15:53:09.933Z",
            "floor": 3,
            "id": 27,
            "listingId": 5,
            "maxOccupancy": 2,
            "minOccupancy": 1,
            "monthlyIncomeMin": "2208.0",
            "monthlyRent": "1104.0",
            "monthlyRentAsPercentOfIncome": null,
            "numBathrooms": null,
            "numBedrooms": null,
            "number": null,
            "priorityType": null,
            "reservedType": null,
            "sqFeet": 285,
            "status": "occupied",
            "unitType": "studio",
            "updatedAt": "2019-08-14T16:06:59.111Z",
          },
          Object {
            "amiChartId": 4,
            "amiPercentage": "45.0",
            "annualIncomeMax": "46125.0",
            "annualIncomeMin": "26496.0",
            "createdAt": "2019-08-14T15:53:09.927Z",
            "floor": 3,
            "id": 26,
            "listingId": 5,
            "maxOccupancy": 2,
            "minOccupancy": 1,
            "monthlyIncomeMin": "2208.0",
            "monthlyRent": "1104.0",
            "monthlyRentAsPercentOfIncome": null,
            "numBathrooms": null,
            "numBedrooms": null,
            "number": null,
            "priorityType": null,
            "reservedType": null,
            "sqFeet": 285,
            "status": "occupied",
            "unitType": "studio",
            "updatedAt": "2019-08-14T16:06:59.105Z",
          },
          Object {
            "amiChartId": 4,
            "amiPercentage": "45.0",
            "annualIncomeMax": "46125.0",
            "annualIncomeMin": "26496.0",
            "createdAt": "2019-08-14T15:53:09.921Z",
            "floor": 3,
            "id": 25,
            "listingId": 5,
            "maxOccupancy": 2,
            "minOccupancy": 1,
            "monthlyIncomeMin": "2208.0",
            "monthlyRent": "1104.0",
            "monthlyRentAsPercentOfIncome": null,
            "numBathrooms": null,
            "numBedrooms": null,
            "number": null,
            "priorityType": null,
            "reservedType": null,
            "sqFeet": 285,
            "status": "occupied",
            "unitType": "studio",
            "updatedAt": "2019-08-14T16:06:59.099Z",
          },
          Object {
            "amiChartId": 4,
            "amiPercentage": "45.0",
            "annualIncomeMax": "46125.0",
            "annualIncomeMin": "26496.0",
            "createdAt": "2019-08-14T15:52:08.819Z",
            "floor": 2,
            "id": 24,
            "listingId": 5,
            "maxOccupancy": 2,
            "minOccupancy": 1,
            "monthlyIncomeMin": "2208.0",
            "monthlyRent": "1104.0",
            "monthlyRentAsPercentOfIncome": null,
            "numBathrooms": null,
            "numBedrooms": null,
            "number": null,
            "priorityType": null,
            "reservedType": null,
            "sqFeet": 285,
            "status": "occupied",
            "unitType": "studio",
            "updatedAt": "2019-08-14T16:06:59.093Z",
          },
          Object {
            "amiChartId": 4,
            "amiPercentage": "45.0",
            "annualIncomeMax": "46125.0",
            "annualIncomeMin": "26496.0",
            "createdAt": "2019-08-14T15:52:08.813Z",
            "floor": 2,
            "id": 23,
            "listingId": 5,
            "maxOccupancy": 2,
            "minOccupancy": 1,
            "monthlyIncomeMin": "2208.0",
            "monthlyRent": "1104.0",
            "monthlyRentAsPercentOfIncome": null,
            "numBathrooms": null,
            "numBedrooms": null,
            "number": null,
            "priorityType": null,
            "reservedType": null,
            "sqFeet": 285,
            "status": "occupied",
            "unitType": "studio",
            "updatedAt": "2019-08-14T16:06:59.086Z",
          },
          Object {
            "amiChartId": 4,
            "amiPercentage": "45.0",
            "annualIncomeMax": "46125.0",
            "annualIncomeMin": "26496.0",
            "createdAt": "2019-08-14T15:52:08.807Z",
            "floor": 2,
            "id": 22,
            "listingId": 5,
            "maxOccupancy": 2,
            "minOccupancy": 1,
            "monthlyIncomeMin": "2208.0",
            "monthlyRent": "1104.0",
            "monthlyRentAsPercentOfIncome": null,
            "numBathrooms": null,
            "numBedrooms": null,
            "number": null,
            "priorityType": null,
            "reservedType": null,
            "sqFeet": 285,
            "status": "occupied",
            "unitType": "studio",
            "updatedAt": "2019-08-14T16:06:59.080Z",
          },
          Object {
            "amiChartId": 4,
            "amiPercentage": "45.0",
            "annualIncomeMax": "46125.0",
            "annualIncomeMin": "26496.0",
            "createdAt": "2019-08-14T15:52:08.802Z",
            "floor": 2,
            "id": 21,
            "listingId": 5,
            "maxOccupancy": 2,
            "minOccupancy": 1,
            "monthlyIncomeMin": "2208.0",
            "monthlyRent": "1104.0",
            "monthlyRentAsPercentOfIncome": null,
            "numBathrooms": null,
            "numBedrooms": null,
            "number": null,
            "priorityType": null,
            "reservedType": null,
            "sqFeet": 285,
            "status": "occupied",
            "unitType": "studio",
            "updatedAt": "2019-08-14T16:06:59.074Z",
          },
          Object {
            "amiChartId": 4,
            "amiPercentage": "45.0",
            "annualIncomeMax": "46125.0",
            "annualIncomeMin": "26496.0",
            "createdAt": "2019-08-14T15:52:08.796Z",
            "floor": 2,
            "id": 20,
            "listingId": 5,
            "maxOccupancy": 2,
            "minOccupancy": 1,
            "monthlyIncomeMin": "2208.0",
            "monthlyRent": "1104.0",
            "monthlyRentAsPercentOfIncome": null,
            "numBathrooms": null,
            "numBedrooms": null,
            "number": null,
            "priorityType": null,
            "reservedType": null,
            "sqFeet": 285,
            "status": "occupied",
            "unitType": "studio",
            "updatedAt": "2019-08-14T16:06:59.067Z",
          },
          Object {
            "amiChartId": 4,
            "amiPercentage": "45.0",
            "annualIncomeMax": "46125.0",
            "annualIncomeMin": "26496.0",
            "createdAt": "2019-08-14T15:52:08.790Z",
            "floor": 2,
            "id": 19,
            "listingId": 5,
            "maxOccupancy": 2,
            "minOccupancy": 1,
            "monthlyIncomeMin": "2208.0",
            "monthlyRent": "1104.0",
            "monthlyRentAsPercentOfIncome": null,
            "numBathrooms": null,
            "numBedrooms": null,
            "number": null,
            "priorityType": null,
            "reservedType": null,
            "sqFeet": 285,
            "status": "occupied",
            "unitType": "studio",
            "updatedAt": "2019-08-14T16:06:59.060Z",
          },
          Object {
            "amiChartId": 4,
            "amiPercentage": "45.0",
            "annualIncomeMax": "46125.0",
            "annualIncomeMin": "26496.0",
            "createdAt": "2019-08-14T15:52:08.783Z",
            "floor": 2,
            "id": 18,
            "listingId": 5,
            "maxOccupancy": 2,
            "minOccupancy": 1,
            "monthlyIncomeMin": "2208.0",
            "monthlyRent": "1104.0",
            "monthlyRentAsPercentOfIncome": null,
            "numBathrooms": null,
            "numBedrooms": null,
            "number": null,
            "priorityType": null,
            "reservedType": null,
            "sqFeet": 285,
            "status": "occupied",
            "unitType": "studio",
            "updatedAt": "2019-08-14T16:06:59.053Z",
          },
          Object {
            "amiChartId": 4,
            "amiPercentage": "45.0",
            "annualIncomeMax": "46125.0",
            "annualIncomeMin": "26496.0",
            "createdAt": "2019-08-14T15:52:08.777Z",
            "floor": 2,
            "id": 17,
            "listingId": 5,
            "maxOccupancy": 2,
            "minOccupancy": 1,
            "monthlyIncomeMin": "2208.0",
            "monthlyRent": "1104.0",
            "monthlyRentAsPercentOfIncome": null,
            "numBathrooms": null,
            "numBedrooms": null,
            "number": null,
            "priorityType": null,
            "reservedType": null,
            "sqFeet": 285,
            "status": "occupied",
            "unitType": "studio",
            "updatedAt": "2019-08-14T16:06:59.046Z",
          },
          Object {
            "amiChartId": 4,
            "amiPercentage": "45.0",
            "annualIncomeMax": "46125.0",
            "annualIncomeMin": "26496.0",
            "createdAt": "2019-08-14T15:52:08.771Z",
            "floor": 2,
            "id": 16,
            "listingId": 5,
            "maxOccupancy": 2,
            "minOccupancy": 1,
            "monthlyIncomeMin": "2208.0",
            "monthlyRent": "1104.0",
            "monthlyRentAsPercentOfIncome": null,
            "numBathrooms": null,
            "numBedrooms": null,
            "number": null,
            "priorityType": null,
            "reservedType": null,
            "sqFeet": 285,
            "status": "occupied",
            "unitType": "studio",
            "updatedAt": "2019-08-14T16:06:59.039Z",
          },
          Object {
            "amiChartId": 4,
            "amiPercentage": "45.0",
            "annualIncomeMax": "46125.0",
            "annualIncomeMin": "26496.0",
            "createdAt": "2019-08-14T15:52:08.766Z",
            "floor": 2,
            "id": 15,
            "listingId": 5,
            "maxOccupancy": 2,
            "minOccupancy": 1,
            "monthlyIncomeMin": "2208.0",
            "monthlyRent": "1104.0",
            "monthlyRentAsPercentOfIncome": null,
            "numBathrooms": null,
            "numBedrooms": null,
            "number": null,
            "priorityType": null,
            "reservedType": null,
            "sqFeet": 285,
            "status": "occupied",
            "unitType": "studio",
            "updatedAt": "2019-08-14T16:06:59.031Z",
          },
          Object {
            "amiChartId": 4,
            "amiPercentage": "45.0",
            "annualIncomeMax": "46125.0",
            "annualIncomeMin": "26496.0",
            "createdAt": "2019-08-14T15:52:08.758Z",
            "floor": 2,
            "id": 14,
            "listingId": 5,
            "maxOccupancy": 2,
            "minOccupancy": 1,
            "monthlyIncomeMin": "2208.0",
            "monthlyRent": "1104.0",
            "monthlyRentAsPercentOfIncome": null,
            "numBathrooms": null,
            "numBedrooms": null,
            "number": null,
            "priorityType": null,
            "reservedType": null,
            "sqFeet": 285,
            "status": "occupied",
            "unitType": "studio",
            "updatedAt": "2019-08-14T16:06:59.023Z",
          },
          Object {
            "amiChartId": 4,
            "amiPercentage": "45.0",
            "annualIncomeMax": "46125.0",
            "annualIncomeMin": "26496.0",
            "createdAt": "2019-08-14T15:53:09.982Z",
            "floor": 3,
            "id": 13,
            "listingId": 5,
            "maxOccupancy": 2,
            "minOccupancy": 1,
            "monthlyIncomeMin": "2208.0",
            "monthlyRent": "1104.0",
            "monthlyRentAsPercentOfIncome": null,
            "numBathrooms": null,
            "numBedrooms": null,
            "number": null,
            "priorityType": null,
            "reservedType": null,
            "sqFeet": 285,
            "status": "occupied",
            "unitType": "studio",
            "updatedAt": "2019-08-14T16:06:59.015Z",
          },
          Object {
            "amiChartId": 4,
            "amiPercentage": "45.0",
            "annualIncomeMax": "46125.0",
            "annualIncomeMin": "26496.0",
            "createdAt": "2019-07-09T14:20:05.783Z",
            "floor": 2,
            "id": 12,
            "listingId": 5,
            "maxOccupancy": 2,
            "minOccupancy": 1,
            "monthlyIncomeMin": "2208.0",
            "monthlyRent": "1104.0",
            "monthlyRentAsPercentOfIncome": null,
            "numBathrooms": null,
            "numBedrooms": null,
            "number": null,
            "priorityType": null,
            "reservedType": null,
            "sqFeet": 285,
            "status": "occupied",
            "unitType": "studio",
            "updatedAt": "2019-08-14T16:05:43.913Z",
          },
        ],
        "updatedAt": "2019-10-18T16:21:37.024Z",
        "waitlistCurrentSize": 0,
        "waitlistMaxSize": 300,
        "yearBuilt": 2012,
      },
      Object {
        "acceptingApplicationsAtLeasingAgent": true,
        "acceptingApplicationsByPoBox": true,
        "acceptingOnlineApplications": true,
        "accessibility": "Accessibility features in common areas like lobby – wheelchair ramps, wheelchair accessible bathrooms and elevators.",
        "amenities": "Gym, Clubhouse, Business Lounge, View Lounge, Pool, Spa",
        "applicationAddress": Object {
          "city": "Foster City",
          "latitude": 37.55695,
          "longitude": -122.27521,
          "state": "CA",
          "street": "55 Triton Park Lane",
          "zipCode": "94404",
        },
        "applicationDueDate": "2037-12-19T17:00:00.000-07:00",
        "applicationFee": "38.0",
        "applicationOrganization": "Triton",
        "applicationPhone": "(650) 437-2039",
        "assets": Array [
          Object {
            "fileId": "https://regional-dahlia-staging.s3-us-west-1.amazonaws.com/listings/triton/thetriton.png",
            "label": "building",
            "referenceId": "jsQvgvy6eJy56TNCFfQp8",
            "referenceType": "Listing",
          },
        ],
        "attachments": Array [
          Object {
            "fileUrl": "/applications/start/choose-language?listingId=jsQvgvy6eJy56TNCFfQp8",
            "type": 2,
          },
        ],
        "blankPaperApplicationCanBePickedUp": true,
        "buildingAddress": Object {
          "city": "Foster City",
          "latitude": 37.55695,
          "longitude": -122.27521,
          "state": "CA",
          "street": "55 Triton Park Lane",
          "zipCode": "94404",
        },
        "buildingSelectionCriteria": "https://regional-dahlia-staging.s3-us-west-1.amazonaws.com/listings/triton/The_Triton_BMRRentalInformation.pdf",
        "buildingTotalUnits": 48,
        "costsNotIncluded": "Residents responsible for PG&E, Internet, Utilities - water, sewer, trash, admin fee. Pet Deposit is $500 with a $60 monthly pet rent. Residents required to maintain a renter's insurance policy as outlined in the lease agreement. Rent is due by the 3rd of each month. Late fee is $50.00. Resident to pay $25 for each returned check or rejected electronic payment. For additional returned checks, resident will pay a charge of $50.00.",
        "createdAt": "2019-06-03T10:30:41.039-07:00",
        "creditHistory": "No collections, no bankruptcy, income is twice monthly rent A credit report will be completed on all applicants to verify credit ratings.

Income plus verified credit history will be entered into a credit scoring model to determine rental eligibility and security deposit levels. All decisions for residency are based on a system which considers credit history, rent history, income qualifications, and employment history. An approved decision based on the system does not automatically constittute an approval of residency. Applicant(s) and occupant(s) aged 18 years or older MUST also pass the criminal background check based on the criteria contained herein to be approved for residency. 

Credit recommendations other than an accept decision, will require a rental verification. Applications for residency will automatically be denied for the following reasons:

- a. An outstanding debt to a previous landlord or an outstanding NSF check must be paid in full
- b. An unsatisfied breach of a prior lease or a prior eviction of any applicant or occupant
- c. More than four (4) late pays and two (2) NSF's in the last twenty-four (24) months ",
        "criminalBackground": "A criminal background investigation will be obtained on each applicant. As criminal background checks are done county by county and will be ran for all counties in which the applicant lived, Applicants will be disqualified for tenancy if they have been convicted of a felony or misdemeanor. Refer to Tenant Selection Criteria or Qualification Criteria for details related to the qualification process.",
        "depositMax": "800.0",
        "depositMin": "500.0",
        "developer": "Thompson Dorfman, LLC",
        "externalId": null,
        "groupId": 2,
        "hideUnitFeatures": false,
        "householdSizeMax": 3,
        "householdSizeMin": 2,
        "id": "jsQvgvy6eJy56TNCFfQp8",
        "leasingAgentAddress": Object {
          "city": "Foster City",
          "latitude": 37.55695,
          "longitude": -122.27521,
          "state": "CA",
          "street": "55 Triton Park Lane",
          "zipCode": "94404",
        },
        "leasingAgentEmail": "thetriton@legacypartners.com",
        "leasingAgentName": "Francis Santos",
        "leasingAgentOfficeHours": "Monday - Friday, 9:00 am - 5:00 pm",
        "leasingAgentPhone": "650-437-2039",
        "leasingAgentTitle": "Business Manager",
        "name": "Test Triton",
        "neighborhood": "Foster City",
        "petPolicy": "Pets allowed except the following; pit bull, malamute, akita, rottweiler, doberman, staffordshire terrier, presa canario, chowchow, american bull dog, karelian bear dog, st bernard, german shepherd, husky, great dane, any hybrid or mixed breed of the aforementioned breeds. 50 pound weight limit. 2 pets per household limit. $500 pet deposit per pet. $60 pet rent per pet.",
        "preferences": Array [],
        "prioritiesDescriptor": null,
        "programRules": null,
        "rentalHistory": "No evictions.",
        "requiredDocuments": "Due at interview - Paystubs, 3 months’ bank statements, recent tax returns or non-tax affidavit, recent retirement statement, application to lease, application qualifying criteria, social security card, state or nation ID. For self-employed, copy of IRS Tax Return including schedule C and current or most recent clients. Unemployment if applicable. Child support/Alimony; current notice from DA office, a court order or a letter from the provider with copies of last two checks. Any other income etc",
        "reservedCommunityMaximumAge": 0,
        "reservedCommunityMinimumAge": 0,
        "reservedDescriptor": null,
        "smokingPolicy": "Non-Smoking",
        "totalUnits": 2,
        "unitAmenities": "Washer and dryer, AC and Heater, Gas Stove",
        "units": Array [
          Object {
            "amiChartId": 1,
            "amiPercentage": "80.0",
            "annualIncomeMax": "103350.0",
            "annualIncomeMin": "58152.0",
            "bmrProgramChart": true,
            "createdAt": "2019-06-03T17:42:43.134Z",
            "floor": null,
            "id": "jBMnzuaeffeq_X0qrWi3j",
            "listingId": "jsQvgvy6eJy56TNCFfQp8",
            "maxOccupancy": 2,
            "minOccupancy": 1,
            "monthlyIncomeMin": "4858.0",
            "monthlyRent": "2429.0",
            "monthlyRentAsPercentOfIncome": null,
            "numBathrooms": 1,
            "numBedrooms": null,
            "number": "265",
            "priorityType": null,
            "reservedType": null,
            "sqFeet": 750,
            "status": "available",
            "unitType": "oneBdrm",
            "updatedAt": "2019-07-10T16:43:16.766Z",
          },
          Object {
            "amiChartId": 1,
            "amiPercentage": "80.0",
            "annualIncomeMax": "160150.0",
            "annualIncomeMin": "85368.0",
            "createdAt": "2019-06-03T17:42:43.134Z",
            "floor": null,
            "id": "Vrfp_MFTbvyc6GG_wduj5",
            "listingId": "jsQvgvy6eJy56TNCFfQp8",
            "maxOccupancy": 7,
            "minOccupancy": 5,
            "monthlyIncomeMin": "5992.0",
            "monthlyRent": "2996.0",
            "monthlyRentAsPercentOfIncome": null,
            "numBathrooms": 1,
            "numBedrooms": null,
            "number": "448",
            "priorityType": null,
            "reservedType": null,
            "sqFeet": 1304,
            "status": "available",
            "unitType": "threeBdrm",
            "updatedAt": "2019-07-10T16:44:01.384Z",
          },
        ],
        "unitsAvailable": 2,
        "updatedAt": "2020-01-23T01:54:15.443-07:00",
        "waitlistCurrentSize": 40,
        "waitlistMaxSize": 100,
        "yearBuilt": 2018,
      },
    ]
  }
  title={
    <React.Fragment>
      Say Hello to Your Hero
    </React.Fragment>
  }
>
  <div
    className="hero "
  >
    <h1
      className="hero__title"
    >
      Say Hello to Your Hero
    </h1>
    <LinkButton
      href="/listings"
    >
      <LocalizedLink
        className="button"
        href="/listings"
      >
        <Link
          href="/listings"
        >
          <a
            className="button"
            href="/listings"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            I am a Button
          </a>
        </Link>
      </LocalizedLink>
    </LinkButton>
  </div>
</Hero>
`;

exports[`Storyshots Headers/Hero With No Listings 1`] = `
<Hero
  buttonLink="/listings"
  buttonTitle="I am a Button"
  listings={Array []}
  title={
    <React.Fragment>
      Say Hello to Your Hero
    </React.Fragment>
  }
>
  <div
    className="hero "
  >
    <h1
      className="hero__title"
    >
      Say Hello to Your Hero
    </h1>
    <h2
      className="hero__subtitle"
    >
      All applications are currently closed, but you can view closed listings.
    </h2>
    <LinkButton
      href="/listings"
    >
      <LocalizedLink
        className="button"
        href="/listings"
      >
        <Link
          href="/listings"
        >
          <a
            className="button"
            href="/listings"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            I am a Button
          </a>
        </Link>
      </LocalizedLink>
    </LinkButton>
  </div>
</Hero>
`;
